# zymino-api

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  \  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  setup.sh  temp.py
api/Zymino API/: bruno.json  signup.bru
api/Zymino API/admin_API/: folder.bru  get_clients.bru  get_reviews.bru  get_tags.bru  login.bru  post_clients.bru  post_reviews.bru  post_tags.bru  retrieve_review.bru
api/Zymino API/environments/: development.bru
api/Zymino API/user_API/: client_lookup.bru  clients.bru  folder.bru  (+8 more)
api_tests/: demo.http
api_tests/auth/: auth.http  otp.http  profile.http  token_refresh.http
api_tests/reviews/: client.http  review.http  reviews.http  tag.http
bruno/Zymino backend/: bruno.json  collection.bru
catalog/: models.py
catalog/migrations/: 0001_initial.py  0002_product_description.py
clients/: models.py
clients/migrations/: 0001_initial.py
config/: settings.py  urls.py
demo/: models.py  serializers.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_book_author.py  0003_remove_book_author.py  0004_remove_book_price.py  0005_book_price.py
invoices/: admin.py  apps.py  models.py  signals.py
invoices/migrations/: 0001_initial.py  0002_invoiceitem_total.py  0003_invoiceitem_unit_type.py
nginx/: default.conf  dev.example.conf
reviews/: admin.py  models.py  schema.py  serializers.py  signals.py  urls.bak.py  urls.py  utils.py  views.bak.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0002_review_author.py  0003_alter_client_phone_number.py
users/: admin.py  authentication.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customerprofile.py  0002_userbusinessprofile.py  0002_userprofile_profile_picture.py  0002_userprofile_referral_code.py  0003_alter_userprofile_referral_code.py  0003_usersubscription.py  0004_userprofile_referred_by.py  0005_userprofile_credit_points.py
(+37 files in other folders)
