[project]
name = "zymino-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "django-types>=0.22.0",
    "djangorestframework-stubs>=3.16.7",
]
