[project]
name = "zymino-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dj-database-url>=3.1.2",
  "django>=6.0.1",
  "django-cors-headers>=4.9.0",
  "djangorestframework>=3.16.1",
  "djangorestframework-simplejwt>=5.5.1",
  "drf-spectacular>=0.29.0",
  "gunicorn>=25.1.0",
  "phonenumbers>=9.0.23",
  "psycopg2-binary>=2.9.11",
  "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
  "django-stubs>=5.2.9",
  "django-types>=0.22.0",
  "djangorestframework-stubs>=3.16.7",
]

[tool.pyright]
reportIncompatibleVariableOverride = false
